src/objects/LG_CalloutSystemFailures__c.object
<CustomObject>
    <description>This object will have all the technical failures of services in ESS journey</description>
    <fields>
        <fullName>LG_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Callout System Failures</relationshipLabel>
        <relationshipName>LG_CalloutSystemFailures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_ErrorCode__c</fullName>
        <inlineHelpText>Service Call System Error Code</inlineHelpText>
        <label>Error Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ErrorDescription__c</fullName>
        <inlineHelpText>Service Callout System error code description</inlineHelpText>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_NotificationDateToOpportunityOwner__c</fullName>
        <inlineHelpText>Refers to the Date when the Opportunity Owner was Notified</inlineHelpText>
        <label>Notification Date To Opportunity Owner</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_NotifyOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Yes for Notification
No for No Notification</description>
        <label>Notify Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_OpportunityName__c</fullName>
        <formula>LG_Opportunity__r.Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_OpportunityOwnerEmail__c</fullName>
        <inlineHelpText>Opportunity Owner Email</inlineHelpText>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LG_OpportunityOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LG_CalloutSystemFailures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_OpportunityStage__c</fullName>
        <formula>Text(LG_Opportunity__r.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Callout System Failures</relationshipLabel>
        <relationshipName>LG_CalloutSystemFailures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_RequestMessage__c</fullName>
        <inlineHelpText>Refers to the request message of the service call</inlineHelpText>
        <label>Request Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_ResponseMessage__c</fullName>
        <label>Response Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_ServiceName__c</fullName>
        <label>Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_TypeOfService__c</fullName>
        <inlineHelpText>Refers to identifying the service which has failed</inlineHelpText>
        <label>Type of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debt Check</fullName>
                </value>
                <value>
                    <fullName>Equifax Company Lookup</fullName>
                </value>
                <value>
                    <fullName>Equifax Address Lookup</fullName>
                </value>
                <value>
                    <fullName>DNA Address</fullName>
                </value>
                <value>
                    <fullName>Credit Check Result</fullName>
                </value>
                <value>
                    <fullName>Credit Check Business</fullName>
                </value>
                <value>
                    <fullName>Payment Direct Debit</fullName>
                </value>
                <value>
                    <fullName>Initiate Card Payment</fullName>
                </value>
                <value>
                    <fullName>Card Payment Result</fullName>
                </value>
                <value>
                    <fullName>Refund Card Payment</fullName>
                </value>
                <value>
                    <fullName>Reverse Card Payment</fullName>
                </value>
                <value>
                    <fullName>Fraud Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Callout System Failure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LG_ServiceName__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LG_TypeOfService__c</columns>
        <columns>LG_ErrorCode__c</columns>
        <columns>LG_ErrorDescription__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CFR-{000000000}</displayFormat>
        <label>Callout Failure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callout System Failures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NotifyOppOwnerOnlyWhenCompleted</fullName>
        <active>true</active>
        <description>Validation to notify user only when Status changes to &apos;Completed&apos;</description>
        <errorConditionFormula>IF(LG_NotifyOwner__c,IF(!ISPICKVAL(LG_Status__c,&apos;Completed&apos;),true,false),false)</errorConditionFormula>
        <errorDisplayField>LG_NotifyOwner__c</errorDisplayField>
        <errorMessage>You cannot notify user without  changing the Status to &apos;Completed&apos;</errorMessage>
    </validationRules>
</CustomObject>